--- a/style.css
+++ b/style.css
@@ -1,105 +1,436 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-    font-family: inter;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: inter;
 }
-.navbar{
-    display: flex;
-    justify-content: space-around;
-    margin: 0px 100px;
+
+/* Navbar started */
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+  width: 83vw;
 }
-.logo{
-    margin: 8px;
+.logo {
+  margin: 8px;
 }
-.input-box{
-    margin: 10px;
-    display: flex;
-    width:665px;
-    height:40px;
-    border: 2px solid #0D6EFD;
-    border-radius: 5px;
+.input-box {
+  margin: 10px;
+  display: flex;
+  width: 665px;
+  height: 40px;
+  border: 2px solid #0d6efd;
+  border-radius: 5px;
 }
 .input-box input {
-    width:441px;
-    padding: 10px;
-    outline: none;
-    border: none;
+  width: 441px;
+  padding: 10px;
+  outline: none;
+  border: none;
 }
-.side-bar{
-    width: 270px ;
-    height: 41px;
+.side-bar {
+  height: 41px;
+  cursor: pointer;
 }
-.side-bar ul{
-    display: flex;
+.side-bar ul {
+  display: flex;
 }
-.side-bar ul li{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 12px;
-    color: #8B96A5;
-    gap: 7px;
-    margin: 1px 2px;
-    padding: 0px 5px;
+.side-bar ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 12px;
+  color: #8b96a5;
+  gap: 7px;
+  margin: 1px 2px;
+  padding: 0px 5px;
 }
-.side-bar li img{
-    height: 20px;
-    width: 20px;
+.side-bar li img {
+  height: 20px;
+  width: 20px;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
-    
+  position: relative;
+  display: inline-block;
 }
 
 .dropbtn {
-    width: 141px;
-    background-color: white;
-    color: black;
-    padding: 6px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 0px solid #0D6EFD;
-    margin-left: -1px;
-    border-left:1px solid #0D6EFD;
-    text-align: left;
+  width: 141px;
+  background-color: white;
+  color: black;
+  padding: 6px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 0px solid #0d6efd;
+  margin-left: -1px;
+  border-left: 1px solid #0d6efd;
+  text-align: left;
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    width: 141px;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-top: none;
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
+  display: none;
+  position: absolute;
+  width: 141px;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-top: none;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 8px;
-    text-decoration: none;
-    display: block;
+  color: black;
+  padding: 8px;
+  text-decoration: none;
+  display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #f8f8f8;
+  background-color: #f8f8f8;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
-.dropdown img{
-    margin-left:17px ;
+.dropdown img {
+  margin-left: 17px;
 }
-.search{
-    background-color: #0D6EFD;
-    width: 100px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    color: white;
+.search {
+  background-color: #0d6efd;
+  width: 100px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: white;
 }
 
+/* all categories mentioned section  */
+.category-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  border-top: 1px solid rgb(226, 224, 224);
+  border-bottom: 1px solid rgb(226, 224, 224);
+}
+.category-section ul {
+  display: flex;
+  margin-right: 163px;
+  margin-top: 15px;
+}
+.category-section ul li {
+  margin: 10px 14px;
+  list-style: none;
+  cursor: pointer;
+}
+.currency {
+  margin-right: 28px;
+  background: none;
+  border: none;
+  padding: 0;
+  outline: none;
+  cursor: pointer;
+}
+.shipping {
+  margin-right: 54px;
+  background: none;
+  border: none;
+  padding: 0;
+  outline: none;
+  cursor: pointer;
+}
+.bg-color {
+  background-color: #efeeee;
+  height: 61vh;
+  margin-top: -16px;
+}
+
+/* flags section */
+.flags-section {
+  width: 82vw;
+  margin: auto;
+}
+.flags-section h2 {
+  margin: 17px 0px;
+}
+.flags {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+}
+.country-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 3px 0px;
+}
+
+.country-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.shop-name {
+  font-size: 12px;
+  color: #666;
+}
+
+/* Subscribe newsletter Section */
+.subscribe-section {
+  display: grid;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #dcdcdc;
+  text-align: center;
+  margin: 28px 0px;
+  padding: 26px 0px;
+  height: 30vh;
+}
+.subscribe-section h3{
+font-size: 20px;
+color: black;
+font-weight: bolder;
+}
+.subscribe-section p{
+    font-size: 16px;
+}
+.subscribe-box {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  position: relative;
+  width: 100%;
+}
+.subscribe-box button{
+    width: 110px;
+    background-color: #0d6efd;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    color: white;
+    height: 40px;
+}
+.subscribe-box input{
+    border: none;
+    outline: none;
+    border-radius:3px;
+    padding: 5px;
+    height: 40px;
+    width: 53%;
+    padding: 12px 15px 12px 45px; 
+
+    
+}
+.input-icon{
+    position: absolute;
+    left: 81px;
+    top: 43%;
+    transform: translateY(-50%);
+}
+/* Footer */
+.footer-box{
+    background-color: none;
+    height: 40vh;
+    width: 80vw;
+    margin: auto;
+    display: flex;
+
+    background-color: white;
+}
+.social-media-icons{
+    height: 40vh;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    
+}
+.social-media-icons > img{
+    width: 156px ;
+    height: 46px;
+    margin: 20px 0px;
+}
+.social-media-icons p {
+    font-size: 16px;
+}
+.icons{
+    display: flex;
+    list-style: none;
+    width: 200px;
+    height: 36px;
+    gap: 10px;
+    text-align: center;
+    align-items: center;
+}
+.headings {
+    margin: 25px 53px 0px 53px;
+}
+
+.headings h4 {
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0px 20px;
+}
+
+.content {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); 
+    gap: 56px;
+}
+
+.content ul {
+    list-style: none; 
+    padding: 0; 
+    margin: 20px 0 0 20px; 
+}
+
+.content ul li {
+    margin-bottom: 10px;
+    color: #cdcdcd;
+}
+
+.about,
+.partnership,
+.information,
+.for-users {
+    text-align: left;
+}
+.for-users h4 {
+    white-space: nowrap; 
+}
+.get-app h4 {
+    white-space: nowrap; 
+}
+.get-app img{
+    margin: 8px 19px;
+}
+
+/* copyright-footer */
+.copyright-footer{
+    background-color: #efeeee;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    padding:15px 125px;
+}
+
+/* Desktop View Media Query */
+@media (min-width: 1100px) {
+    /* Navbar adjustments */
+    .navbar {
+      justify-content: space-between;
+      width: 90vw;
+    }
+  
+    .logo img {
+      height: 50px;
+    }
+  
+    .input-box {
+      width: 50%;
+      height: 50px;
+    }
+  
+    .input-box input {
+      font-size: 16px;
+    }
+  
+    .dropbtn {
+      font-size: 14px;
+      padding: 8px 10px;
+    }
+  
+    .search {
+      font-size: 14px;
+      height: 50px;
+    }
+  
+    .side-bar ul li {
+      font-size: 14px;
+    }
+  
+    /* Category section adjustments */
+    .category-section {
+      padding: 10px 0;
+      justify-content: space-between;
+    }
+  
+    .category-section ul li {
+      font-size: 16px;
+      margin: 0 20px;
+    }
+  
+    .btns button {
+      font-size: 14px;
+    }
+  
+    /* Flags section adjustments */
+    .flags {
+      grid-template-columns: repeat(5, 1fr);
+      gap: 20px;
+    }
+  
+    .country-text span {
+      font-size: 14px;
+    }
+  
+    /* Subscribe section */
+    .subscribe-section h3 {
+      font-size: 24px;
+    }
+  
+    .subscribe-section p {
+      font-size: 18px;
+    }
+  
+    .subscribe-box {
+      width: 60%;
+      margin: auto;
+    }
+  
+    .subscribe-box input {
+      width: 70%;
+      font-size: 16px;
+    }
+  
+    .subscribe-box button {
+      font-size: 16px;
+    }
+  
+    .input-icon {
+      left: 15px;
+    }
+  
+    /* Footer adjustments */
+    .footer-box {
+      padding: 20px 0;
+    }
+  
+    .social-media-icons {
+      margin-right: 50px;
+    }
+  
+    .social-media-icons p {
+      font-size: 14px;
+    }
+  
+    .headings {
+      margin: 20px 40px;
+    }
+  
+    .headings h4 {
+      font-size: 18px;
+    }
+  
+    .content {
+      gap: 40px;
+    }
+  
+    .content ul li {
+      font-size: 14px;
+    }
+  
+    .copyright-footer {
+      padding: 20px 100px;
+    }
+  }
+  
